[FIX] mail: better spacing between message cards
Before this commit, message in card visual like in mailboxes
had too much spacing.

This commit reduces the spacing by half.

Also the dark theme had too distracting borders, their opacity
have been changed to 0. The border is kept for exact same spacing
as in white theme.

X-original-commit: cfa277bde24f92ef86e94c134c9a99b48d4191b8

--- a/addons/mail/static/src/core/common/message.dark.scss
+++ b/addons/mail/static/src/core/common/message.dark.scss
@@ -1,5 +1,6 @@
 .o-mail-Message.o-card {
     background-color: mix($gray-100, $gray-200);
+    --border-opacity: .15;
 }
 
 .o-mail-Message-actions {
